<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * This file is part of Hash It!.
 * 
 * Copyright (C) 2009-2011 Thilo-Alexander Ginkel.
 * Copyright (C) 2011-2013 TG Byte Software GmbH.
 * 
 * Hash It! is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * Hash It! is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with Hash It!.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>
	<string name="AppName">Hash It!</string>
	<string name="Message_HashCopiedToClipboard">The hash word has been copied to the clipboard.
	</string>
	<string name="Message_SiteTagEmpty">The Site Tag must not be empty.</string>
	<string name="Message_MasterKeyEmpty">The Master Key must not be empty.</string>
	<string name="Message_SiteTagFailure">Failed to extract Site Tag from URI.</string>
	<string name="Message_InvalidSiteTag">The specified Site Tag is invalid and thus cannot
		be bumped.</string>
	<string name="Message_ClipboardError">An error occurred while copying the Hash Word to the clipboard. Unfortunately, this is caused by a Samsung firmware bug that we cannot work around.</string>
	<string name="MenuItem_Settings">Settings</string>
	<string name="MenuItem_About">About</string>
	<string name="Title_About">About Hash It!</string>
	<string name="Header_Requirements">Requirements</string>
	<string name="CheckBox_Digits">Digits</string>
	<string name="CheckBox_Punctuation">Punctuation</string>
	<string name="CheckBox_MixedCase">Mixed Case</string>
	<string name="Header_Restrictions">Restrictions</string>
	<string name="CheckBox_NoSpecialChars">No Special Chars</string>
	<string name="CheckBox_DigitsOnly">Digits Only</string>
	<string name="Header_HashWordSize">Hash Word Size</string>
	<string name="Label_Size">Hash Word Size</string>
	<string name="Label_Password">Password</string>
	<string name="Label_Settings">Parameters</string>
	<string name="Title_Settings">Settings</string>
	<string name="Title_Parameters">Parameters</string>
	<string-array name="Array_Sizes">
		<item>4 characters</item>
		<item>6 characters</item>
		<item>8 characters</item>
		<item>10 characters</item>
		<item>12 characters</item>
		<item>14 characters</item>
		<item>16 characters</item>
		<item>18 characters</item>
		<item>20 characters</item>
		<item>22 characters</item>
		<item>24 characters</item>
		<item>26 characters</item>
	</string-array>
	<string-array name="Array_Sizes_Values">
		<item>4</item>
		<item>6</item>
		<item>8</item>
		<item>10</item>
		<item>12</item>
		<item>14</item>
		<item>16</item>
		<item>18</item>
		<item>20</item>
		<item>22</item>
		<item>24</item>
		<item>26</item>
	</string-array>
	<string name="Text_Introduction">Welcome to <b>Hash It!</b>!</string>
	<string name="Text_About"><b>Hash It! for Android</b>
\n<small>Version 1.7.1
\n
\nCopyright © 2009-2011\nThilo-Alexander Ginkel.
\nCopyright © 2011-2013 TG Byte Software GmbH.
\n
\nPortions based upon Password Hasher by Steve Cooper.
\nCopyright © 2006 Steve Cooper.
\n
\nThis product includes software developed by <a href="http://www.apache.org/">The Apache Software Foundation</a>.
\nCopyright © 2002-2009 The Apache Software Foundation.
\n
\nThis product includes fonts developed by <a href="http://www.adobe.com/">Adobe Systems Incorporated</a>.
\nCopyright © 2010, 2012 Adobe Systems Incorporated, with Reserved Font Name \'Source\'. All Rights Reserved. Source is a trademark of Adobe Systems Incorporated in the United States and/or other countries.
\n
\nHash It! eases using unique passwords per web site without overloading your brain. It is compatible with the hashing algorithm used by the Password Hasher Firefox extension.
\n
\n<b>Further Information / Changelog</b>
\n<a href="http://android.ginkel.com/">http://android.ginkel.com/</a>
\n
\n<b>Found a bug or would like to provide feedback?</b>
\n<a href="mailto:android@ginkel.com">android@ginkel.com</a>
\n</small>
\n<b>License</b>
\n<small>Hash It! is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
\n
\nHash It! is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the <a href="http://www.gnu.org/licenses/">GNU General Public License</a> for more details.
\n</small>
\n<b>Apache Commons Codec</b>
\n<small>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
\n
\nYou may obtain a copy of the License at: <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
\n
\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</small>\n
\n<b>Adobe Source Code Pro</b>
\n<small>Licensed under the SIL Open Font License, Version 1.1.
\n
\nYou may obtain a copy of the License at: <a href="http://scripts.sil.org/OFL">http://scripts.sil.org/OFL</a></small>\n</string>
	<string name="Text_Welcome"><b>Welcome to Hash It!</b>
\n<small>
\nHash It! eases using unique passwords per web site without overloading your brain by generating site-specific passwords derived from a secret Master Key. You will only have to remember a single or few Master Keys whereas Hash It! will make sure that no two web sites will use the same password.
\n
\n<b>What\'s New?</b>
\nVersion 1.7.1:
<ul>
\n<li>Do not crash if the Site Tag contains a slash (\"/\")</li>
</ul>
\nVersion 1.7.0:
<ul>
\n<li>Use a better readable font to facilitate manually reading and typing the hash word (e.g., when not using the clipboard)</li>
\n<li>Add an option to disable using the clipboard</li>
</ul>
\n
\n<b>Usage</b>
\nFrom the Browser application, just choose &quot;Share Page&quot; from the menu and select the &quot;Hash It!&quot; entry from the list. After calculating the Hash Word, the password will have been placed on the clipboard. Just hit the back button to return to the web site and paste the clipboard to the password entry field.
\n
\n<b>Compatibility</b>
\nHash It! is designed to be compatible with the hashing algorithm used by the Password Hasher Firefox extension and supports the &quot;Private Key&quot; feature from the Password Hasher Plus extension for Google Chrome.
\n
\n<b>Further Information / Changelog</b>
\n<a href="http://android.ginkel.com/">http://android.ginkel.com/</a></small></string>
	<string name="Title_Welcome"><b>Hash It! for Android</b>
\n<small>Version 1.7.1</small></string>
	<string name="Header_LookAndFeel">Look &amp; Feel</string>
	<string name="CheckBox_UseDarkTheme">Use Dark Theme</string>
	<string name="Header_Convenience">Convenience</string>
	<string name="CheckBox_EnableHistory">Enable History</string>
	<string name="Summary_EnableHistory">Keep a history of entered Site Tags.</string>
	<string name="Action_ClearHistory">Clear History</string>
	<string name="Summary_ClearHistory">Clear the Site Tag history.</string>
	<string name="Summary_ClearHistory_Empty">The Site Tag history is empty.</string>
	<string name="CheckBox_AutoExit">Return to Browser</string>
	<string name="Summary_AutoExit">Automatically return to the web browser after hashing the password (only works if Hash It! was invoked via the browser\'s Share feature).</string>
	<string name="Label_CacheMasterKey">Cache Master Key</string>
	<string name="Header_CacheDuration">Caching Duration</string>
	<string-array name="Array_CacheDuration">
		<item>Never</item>
		<item>5 minutes</item>
		<item>15 minutes</item>
		<item>30 minutes</item>
		<item>1 hour</item>
		<item>2 hours</item>
		<item>4 hours</item>
		<item>8 hours</item>
		<item>12 hours</item>
		<item>24 hours</item>
	</string-array>
	<string-array name="Array_CacheDuration_Values">
		<item>-1</item>
		<item>5</item>
		<item>15</item>
		<item>30</item>
		<item>60</item>
		<item>120</item>
		<item>240</item>
		<item>480</item>
		<item>720</item>
		<item>1440</item>
	</string-array>
	<string name="Header_Security">Security</string>
	<string name="CheckBox_CompatibilityMode">Use Compatibility Mode</string>
	<string name="Summary_CompatibilityMode">Disables Private Key mode, which is not compatible with the original Password Hasher Firefox extension.</string>
	<string name="Action_ChangeSeed">Change Private Key</string>
	<string name="Summary_ChangeSeed">Changes the private key. Note that this invalidates any passwords that were generated with the previous Private Key.</string>
	<string name="Title_ChangeSeed"><b>Change Private Key</b></string>
	<string name="Title_SeedWarning"><b>Disable Compatibility Mode</b></string>
	<string name="CheckBox_DisableClipboard">Disable Clipboard Usage</string>
	<string name="Summary_DisableClipboard">Disables usage of the system clipboard (which may be monitored by arbitrary applications), i.e., does not copy the Hash Word to the clipboard. Selecting this option disables the "Return to Browser" setting.</string>
	<string name="Message_SeedWarning">You have chosen to disable Compatibility Mode. Note that this mode is only compatible with the Password Hasher Plus extension for Google Chrome, but <b>not</b> with the original Password Hasher extension for Firefox.\n\nIf you want this to work correctly, also make sure that you use the same Private Key on all your devices.</string>
	<string name="Summary_GlobalCompatibilityMode">Compatibility Mode is globally enabled. Change this in the settings.</string>
	<string name="CheckBox_ShowMasterKeyDigest">Show Master Key Digest</string>
	<string name="Summary_ShowMasterKeyDigest">Displays a cryptographic digest of the Master Key to ease detecting typographic errors.</string>
</resources>
